--- a/index.html
+++ b/index.html
@@ -1,45 +1,45 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Four card feature section</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>four card feature</title>
+	<link rel="stylesheet" href="styles.css">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
-
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+	<div class="container">
+		<div class="header">
+			<p class="text-top">Reliable, efficient delivery</p>
+			<p class="text-second">Powered by Technology</p>
+			<p>Our Artificial Intelligence powered tools use millions of project data points 						to ensure that your project is successful</p>
+		</div>
+		<div class="cards">
+			<div class="left">
+				<h4>Supervisor</h4>
+				<p>Monitors activity to identify project roadblocks</p>
+				<img src="file:///C:/Users/Admin/Desktop/four-card-feature-section-								master/four-card-feature-section-master/images/icon-supervisor.svg">
+			</div>
+			<div class="center">
+				<div class="top">
+					<h4>Team Builder</h4>
+					<p>Scans our talent network to create the optimal team for your project</p>
+					<img src="file:///C:/Users/Admin/Desktop/four-card-feature-section-								master/four-card-feature-section-master/images/icon-team-builder.svg">
+				</div>
+				<div class="bottom">
+					<h4>Karma</h4>
+					<p>Regularly evaluates our talent to ensure quality</p>
+					<img src="file:///C:/Users/Admin/Desktop/four-card-feature-section-								master/four-card-feature-section-master/images/icon-karma.svg">
+				</div>
+			</div>
+			<div class="right">
+				<h4>Caculator</h4>
+				<p>Calculator Uses data from past projects to provide better delivery estimates</p>
+				<img src="file:///C:/Users/Admin/Desktop/four-card-feature-section-								master/four-card-feature-section-master/images/icon-calculator.svg">
+			</div>
+		</div>
+	</div>
 </body>
 </html>
