--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
 			<div class="left">
 				<h4>Supervisor</h4>
 				<p>Monitors activity to identify project roadblocks</p>
-				<img src="file:///C:/Users/Admin/Desktop/four-card-feature-section-master/four-card-feature-section-master/images/icon-supervisor.svg">
+				<img src="icon-supervisor.svg">
 			</div>
 			<div class="center">
 				<div class="top">
 					<h4>Team Builder</h4>
 					<p>Scans our talent network to create the optimal team for your project</p>
-					<img src="file:///C:/Users/Admin/Desktop/four-card-feature-section-master/four-card-feature-section-master/images/icon-team-builder.svg">
+					<img src="icon-team-builder.svg">
 				</div>
 				<div class="bottom">
 					<h4>Karma</h4>
 					<p>Regularly evaluates our talent to ensure quality</p>
-					<img src="file:///C:/Users/Admin/Desktop/four-card-feature-section-master/four-card-feature-section-master/images/icon-karma.svg">
+					<img src="icon-karma.svg">
 				</div>
 			</div>
 			<div class="right">
 				<h4>Caculator</h4>
 				<p>Calculator Uses data from past projects to provide better delivery estimates</p>
-				<img src="file:///C:/Users/Admin/Desktop/four-card-feature-section-master/four-card-feature-section-master/images/icon-calculator.svg">
+				<img src="icon-calculator.svg">
 			</div>
 		</div>
 	</div>
